--- a/imagenes.html
+++ b/imagenes.html
@@ -31,7 +31,7 @@
 	<br>
 	<br>
 	<br>
-		<img src="Imagenes/2.JPG" width="80%" height="auto" alt=""/>
+		<img src="2.JPG" width="80%" height="auto" alt=""/>
 		<br>
 	<br>
 	<br>
